k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: user1
---
apiVersion: v1
kind: Namespace
metadata:
  name: user2
---
apiVersion: v1
kind: Namespace
metadata:
  name: user3
